add location and time fields to task model
